--- a/gui/WebContent/style.css
+++ b/gui/WebContent/style.css
@@ -13,6 +13,38 @@ h2 {
 	padding: 0;
 }
 
+table.center {
+    margin-left:auto; 
+    margin-right:auto;
+}
+
+table
+{
+	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+	width:96%;
+	border-collapse:collapse;
+}
+td, th 
+{
+	font-size:1em;
+	border:1px solid #2198C0;
+	padding:3px 7px 2px 7px;
+}
+th 
+{
+	font-size:1.1em;
+	text-align:left;
+	padding-top:5px;
+	padding-bottom:4px;
+	background-color:#A2BEDD;
+	color:#ffffff;
+}
+tr.alt td 
+{
+	color:#000000;
+	background-color:#A5D5E4;
+}
+
 #taskManagementContainer {
 	width: 100%;
 	height: 100%;
